@@ -8,4 +8,4 @@ Description: libgnome
 Requires: glib-2.0 ORBit-2.0 libbonobo-2.0 gconf-2.0
 Version: @VERSION@
 Libs: -L${libdir} -lgnome-2
-Cflags: -I${includedir}/gnome/2
+Cflags: -I${includedir}/gnome-2.0
