@@ -1,3 +1,11 @@
+2001-09-06  Anders Carlsson  <andersca@gnu.org>
+
+	* libgnome-2.0.pc.in (Cflags): Use gnome-2.0/
+	instead of gnome/2/
+
+	* Makefile.am: Install libgnome.h in libgnomeui/
+	and use gnome-2.0/ instead of gnome/2/
+
 Tue Sep 04 19:12:15 2001  George Lebl <jirka@5z.com>
 
 	* gnome-config.h: include gnome-init.h
